# dbt-ci

./: .gitignore  Dockerfile  Pipfile  README.md  dependency_graph.json  main.py  pyproject.toml  requirements.txt
src/: cli.py  dependency_graph.py  main.py  parser.py  paths.py  runners.py  schema.py  utilities.py
src/adapters/: slack.py
src/connectors/: bigquery.py
src/runners/: __init__.py  bash.py  dbt.py  docker.py  local.py
src/workflows/: ephemeral_environment.py
